--- a/BIRD.vcxproj
+++ b/BIRD.vcxproj
@@ -139,26 +139,33 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="BackGround.cpp" />
-    <ClCompile Include="Block.cpp" />
-    <ClCompile Include="Camera.cpp" />
+    <ClCompile Include="Camera\Camera.cpp" />
     <ClCompile Include="main.cpp" />
-    <ClCompile Include="Map.cpp" />
-    <ClCompile Include="Pad.cpp" />
-    <ClCompile Include="Player.cpp" />
-    <ClCompile Include="Stage.cpp" />
-    <ClCompile Include="Vec3.cpp" />
+    <ClCompile Include="Object\BackGround.cpp" />
+    <ClCompile Include="Object\Block.cpp" />
+    <ClCompile Include="Object\Player.cpp" />
+    <ClCompile Include="Scene\SceneMain.cpp" />
+    <ClCompile Include="Scene\SceneTitle.cpp" />
+    <ClCompile Include="Scene\SceneManager.cpp" />
+    <ClCompile Include="Stage\Map.cpp" />
+    <ClCompile Include="Util\Pad.cpp" />
+    <ClCompile Include="Scene\SceneBase.cpp" />
+    <ClCompile Include="Stage\Stage.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="BackGround.h" />
-    <ClInclude Include="Block.h" />
-    <ClInclude Include="Camera.h" />
-    <ClInclude Include="game.h" />
-    <ClInclude Include="Map.h" />
-    <ClInclude Include="Pad.h" />
-    <ClInclude Include="Player.h" />
-    <ClInclude Include="Stage.h" />
-    <ClInclude Include="Vec3.h" />
+    <ClInclude Include="Camera\Camera.h" />
+    <ClInclude Include="Common.h" />
+    <ClInclude Include="Object\BackGround.h" />
+    <ClInclude Include="Object\Block.h" />
+    <ClInclude Include="Object\Player.h" />
+    <ClInclude Include="Scene\SceneMain.h" />
+    <ClInclude Include="Scene\SceneTitle.h" />
+    <ClInclude Include="Scene\SceneManager.h" />
+    <ClInclude Include="Util\game.h" />
+    <ClInclude Include="Stage\Map.h" />
+    <ClInclude Include="Util\Pad.h" />
+    <ClInclude Include="Scene\SceneBase.h" />
+    <ClInclude Include="Stage\Stage.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
