--- a/BIRD.vcxproj.filters
+++ b/BIRD.vcxproj.filters
@@ -45,7 +45,7 @@
     <ClCompile Include="Object\BackGround.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
-    <ClCompile Include="Object\Block.cpp">
+    <ClCompile Include="Object\GameObject.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
     <ClCompile Include="Object\Player.cpp">
@@ -92,7 +92,7 @@
     <ClInclude Include="Object\BackGround.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
-    <ClInclude Include="Object\Block.h">
+    <ClInclude Include="Object\GameObject.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
     <ClInclude Include="Object\Player.h">
