--- a/BIRD.vcxproj.filters
+++ b/BIRD.vcxproj.filters
@@ -57,6 +57,9 @@
     <ClCompile Include="Scene\SceneResult.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="Common.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Util\game.h">
