ノーマルの仮追加

--- a/BIRD.vcxproj
+++ b/BIRD.vcxproj
@@ -142,6 +142,7 @@
     <ClCompile Include="Camera\Camera.cpp" />
     <ClCompile Include="Common.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Scene\SceneSelect.cpp" />
     <ClCompile Include="Scene\SceneResult.cpp" />
     <ClCompile Include="Util\Model.cpp" />
     <ClCompile Include="Object\BackGround.cpp" />
@@ -158,6 +159,7 @@
   <ItemGroup>
     <ClInclude Include="Camera\Camera.h" />
     <ClInclude Include="Common.h" />
+    <ClInclude Include="Scene\SceneSelect.h" />
     <ClInclude Include="Scene\SceneResult.h" />
     <ClInclude Include="Util\Model.h" />
     <ClInclude Include="Object\BackGround.h" />
